Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!-- Write your HTML in this file -->
-<!doctype HTML>
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>My First Page</title>
+  </head>
+  <body>
+    
+  </body>
+</html>
